Address reported issues
This update addressed the issue with the missing challenge page images and Description file issue. See Proposed Change note in app.R

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,13 @@
 Title: Time Series Decomposition
 ShortName: Time Series Decomposition
-Date: 2022-05-13
+Date: 2023-07-10
 Lifecycle: experimental
 Authors@R: c(
-    person(given = "Jiajun", family = "Gao", role = c("aut")),
-    person(given = "Dennis", family = "Pearl", role = c("ctb")),
-    person(given = "Neil", family = "Hatfield", role = c("ctb")),
-    person(given = "Luqi", family = "Jiao Emanuele", role = c("ctb"))
+    person(given = "Jiajun", family = "Gao", role = c("aut", "cre")),
+    person(given = "Stuart", family = "Vas", role = c("aut")),
+    person(given = "Luqi", family = "Jiao Emanuele", role = c("aut")),
+    person(given = "Dennis", family = "Pearl", role = c("aut")),
+    person(given = "Neil", family = "Hatfield", email = "neil.hatfield@psu.edu", role = c("aut"))
   )
 Chapter: Time Series
 Description: This app helps learners distinguish different components of a time series plot.
